add new open API - Add Roles
