# docs/swagger.json
@@ -17,6 +17,54 @@
     },
     "basePath": "/",
     "paths": {
+        "/v1/roles": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Roles registration endpoint",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Roles V1.0"
+                ],
+                "summary": "Create New Roles",
+                "parameters": [
+                    {
+                        "description": "Request Roles User",
+                        "name": "users",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/service.CreateRolesReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.JSONResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/response.JSONResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/response.JSONResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/v1/users": {
             "post": {
                 "description": "User registration endpoint",
@@ -87,6 +135,17 @@
                 }
             }
         },
+        "service.CreateRolesReq": {
+            "type": "object",
+            "properties": {
+                "created_by": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
         "service.CreateUsersReq": {
             "type": "object",
             "properties": {
@@ -112,6 +171,13 @@
                     "type": "string"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "ApiKeyAuth": {
+            "type": "apiKey",
+            "name": "Mentoring App",
+            "in": "header"
         }
     }
 }
